serveurConfig/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: tindfilm
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-ui
            port:
              number: 8000
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8080
      - path: /film
        pathType: Prefix
        backend:
          service:
            name: film
            port:
              number: 8080
      - path: /selector
        pathType: Prefix
        backend:
          service:
            name: selector
            port:
              number: 8080
      - path: /group
        pathType: Prefix
        backend:
          service:
            name: group
            port:
              number: 8080
